# pgmodeler

./: .gitignore  BuildConfs.cmake  BuildNumDate.cmake  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  COMPILING.md  DefaultPaths.cmake  InstallAssets.cmake  LinuxPaths.cmake  MacOsPaths.cmake  PLUGINS.md  PluginBuildConfs.cmake  PrintSummary.cmake  README.md  RELEASENOTES.md  ROADMAP.md  WindowsPaths.cmake  dbm-mime-type.sh  docmainpage.doxy  doxygen.conf  getbuildnum.bat  getbuildnum.sh  linuxdeploy.sh  macdeploy.sh  pgModeler.iss  pgmodeler-cli.sh  pgmodeler-intl.pro  pgmodeler.appdata.xml  pgmodeler.iss  pgmodeler.pri  pgmodeler.pro  pgmodeler.sh  pgmodeler.vars  start-pgmodeler-mac.sh  start-pgmodeler.bat  start-pgmodeler.sh  startapp  windeploy.sh  wingetdate.bat
apps/pgmodeler/: CMakeLists.txt  pgmodeler.pro
apps/pgmodeler-ch/: CMakeLists.txt  pgmodeler-ch.pro
apps/pgmodeler-ch/src/: crashhandlerform.cpp  crashhandlerform.h  main.cpp
apps/pgmodeler-cli/: CMakeLists.txt  pgmodeler-cli.pro
apps/pgmodeler-cli/res/: windows_ico.rc
apps/pgmodeler-cli/src/: main.cpp  main.cpp.old  pgmodelercliapp.cpp  pgmodelercliapp.h
apps/pgmodeler-se/: CMakeLists.txt  pgmodeler-se.pro
apps/pgmodeler-se/src/: aboutsewidget.cpp  aboutsewidget.h  aboutwidget.cpp  aboutwidget.h  main.cpp  schemaeditorform.cpp  schemaeditorform.h  sourceeditorwidget.cpp  sourceeditorwidget.h
apps/pgmodeler-se/ui/: aboutsewidget.ui  aboutwidget.ui  schemaeditorform.ui  sourceeditorwidget.ui  syntaxcheckerform.ui
apps/pgmodeler/res/: Info.plist  windows_ico.rc
apps/pgmodeler/src/: main.cpp  pgmodelerapp.cpp  pgmodelerapp.h
libs/libcanvas/: CMakeLists.txt  libcanvas.pro
libs/libcanvas/src/: attributestoggleritem.cpp  attributestoggleritem.h  baseobjectview.cpp  baseobjectview.h  basetableview.cpp  basetableview.h  beziercurveitem.cpp  beziercurveitem.h  canvasglobal.h  graphicalview.cpp  graphicalview.h  layeritem.cpp  layeritem.h  objectsscene.cpp  objectsscene.h  relationshipview.cpp  relationshipview.h  roundedrectitem.cpp  roundedrectitem.h  schemaview.cpp  schemaview.h  styledtextboxview.cpp  styledtextboxview.h  tableobjectview.cpp  tableobjectview.h  tabletitleview.cpp  tabletitleview.h  tableview.cpp  tableview.h  textboxview.cpp  textboxview.h  textpolygonitem.cpp  textpolygonitem.h
libs/libcli/: CMakeLists.txt  libcli.pro
libs/libcli/src/: cliglobal.h  pgmodelercliapp.cpp  pgmodelercliapp.h  pgmodelercliplugin.cpp  pgmodelercliplugin.h
libs/libconnector/: CMakeLists.txt  libconnector.pro
libs/libconnector/src/: catalog.cpp  catalog.h  connection.cpp  connection.h  connectorglobal.h  resultset.cpp  resultset.h
libs/libcore/: CMakeLists.txt  libcore.pro
libs/libcore/src/: aggregate.cpp  aggregate.h  basefunction.cpp  basefunction.h  basegraphicobject.cpp  basegraphicobject.h  baseobject.cpp  baseobject.h  baserelationship.cpp  baserelationship.h  basetable.cpp  basetable.h  cast.cpp  cast.h  collation.cpp  collation.h  column.cpp  column.h  constraint.cpp  constraint.h  conversion.cpp  conversion.h  copyoptions.cpp  copyoptions.h  coreglobal.h  coreutilsns.cpp  coreutilsns.h  databasemodel.cpp  databasemodel.h  defaultlanguages.h  domain.cpp  domain.h  element.cpp  element.h  eventtrigger.cpp  eventtrigger.h  excludeelement.cpp  excludeelement.h  extension.cpp  extension.h  (+79 more)
libs/libgui/: CMakeLists.txt  libgui.pro
libs/libgui/res/: logoicons.qrc  resources.qrc
libs/libgui/src/: aboutwidget.cpp  aboutwidget.h  appearanceconfigwidget.h  baseconfigwidget.h  baseform.cpp  baseform.h  basefunctionwidget.cpp  basefunctionwidget.h  baseobjectwidget.cpp  baseobjectwidget.h  bugreportform.h  castwidget.h  changelogwidget.cpp  changelogwidget.h  codecompletionwidget.h  columnwidget.cpp  configurationform.cpp  configurationform.h  connectionsconfigwidget.cpp  connectionsconfigwidget.h  constraintwidget.h  csvloadwidget.h  customsqlwidget.h  databaseexplorerwidget.cpp  databaseimportform.cpp  databaseimportform.h  databaseimporthelper.cpp  databasewidget.h  datamanipulationform.cpp  datamanipulationform.h  deletableitemdelegate.cpp  deletableitemdelegate.h  domainwidget.cpp  domainwidget.h  donatewidget.cpp  donatewidget.h  elementstablewidget.cpp  elementstablewidget.h  elementwidget.cpp  elementwidget.h  (+128 more)
libs/libgui/ui/: baseform.ui  basefunctionwidget.ui  baseobjectwidget.ui  columnwidget.ui  configurationform.ui  connectionsconfigwidget.ui  conversionwidget.ui  csvloadwidget.ui  customsqlwidget.ui  datamanipulationform.ui  findreplacewidget.ui  generalconfigwidget.ui  indexwidget.ui  layersconfigwidget.ui  mainwindow.ui  messagebox.ui  metadatahandlingform.ui  modeldatabasediffform.ui  modelobjectswidget.ui  modeloverviewwidget.ui  modelrestorationform.ui  modelvalidationwidget.ui  objectdepsrefswidget.ui  objectstablewidget.ui  pgsqltypewidget.ui  relationshipconfigwidget.ui  schemawidget.ui  snippetsconfigwidget.ui  sourcecodewidget.ui  sqltoolwidget.ui  tabledatawidget.ui  taskprogresswidget.ui  tipofdayform.ui  updatenotifierwidget.ui  viewwidget.ui  welcomewidget.ui
libs/libparsers/: CMakeLists.txt  libparsers.pro
libs/libparsers/src/: attribsmap.h  attributes.cpp  attributes.h  csvdocument.cpp  csvdocument.h  csvparser.cpp  csvparser.h  parsersglobal.h  schemaparser.cpp  schemaparser.h  xmlparser.cpp  xmlparser.h
libs/libutils/: CMakeLists.txt  libutils.pro
libs/libutils/src/: application.cpp  application.h  attribsmap.h  customuistyle.cpp  customuistyle.h  doublenan.h  enumtype.h  exception.cpp  exception.h  exportsym.h  globalattributes.cpp  globalattributes.h  pgmodelercliplugin.cpp  pgmodelercliplugin.h  pgmodelerplugin.cpp  pgmodelerplugin.h  pgsqlversions.cpp  pgsqlversions.h  utilsglobal.h  utilsns.cpp  utilsns.h
tests/: CMakeLists.txt  tests.pri  tests.pro
tests/src/: main.cpp  pgmodelerunittest.h
tests/src/basefunctiontest/: CMakeLists.txt  basefunctiontest.cpp  basefunctiontest.pro
tests/src/baseobjecttest/: CMakeLists.txt  baseobjecttest.cpp  baseobjecttest.pro
tests/src/csvparsertest/: CMakeLists.txt  csvparsertest.cpp  csvparsertest.pro
(+2556 files in other folders)
