cmake_minimum_required(VERSION 3.16)
project(pgmodeler VERSION 2.0 LANGUAGES C CXX)

list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR})
include(BuildConfs)
include(DefaultPaths)
include(BuildNumDate)
include(PrintSummary)
include(InstallAssets)

add_subdirectory(libs/libutils)
add_subdirectory(libs/libparsers)
add_subdirectory(libs/libcore)
add_subdirectory(libs/libconnector)
add_subdirectory(libs/libcanvas)
add_subdirectory(libs/libgui)
add_subdirectory(libs/libcli)
add_subdirectory(apps/pgmodeler)
add_subdirectory(apps/pgmodeler-cli)
add_subdirectory(apps/pgmodeler-ch)
add_subdirectory(apps/pgmodeler-se)

if(CMAKE_BUILD_TYPE STREQUAL Debug AND BUILD_TESTS)
    add_subdirectory(tests)
endif()

print_build_summary()
